# NoteDiscovery

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.ghcr.yml  docker-compose.yml  generate_password.py  pyproject.toml  release.ps1  render.yaml  requirements.txt  run.py  start.bat
.github/workflows/: docker-publish.yml
backend/: export.py  main.py  share.py  themes.py  utils.py
docs/: index.html
documentation/: API.md  AUTHENTICATION.md  ENVIRONMENT_VARIABLES.md  FEATURES.md  MCP.md  MERMAID.md  PLUGINS.md  PLUGIN_NOTE_STATISTICS.md  SHARING.md  TAGS.md  THEMES.md
frontend/: app.js  index.html  login.html
locales/: de-DE.json  en-GB.json  en-US.json  es-ES.json  fr-FR.json  hu-HU.json  it-IT.json  ja-JP.json  ru-RU.json  sl-SI.json  zh-CN.json
mcp_server/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py
themes/: cobalt2.css  dark.css  dracula.css  gruvbox-dark.css  light.css  matcha-light.css  monokai.css  nord.css  vs-blue.css  vue-high-contrast.css
