[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notediscovery"
dynamic = ["version"]
description = "A beautiful, fast markdown notes discovery and browsing tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NoteDiscovery", email = "contact@notediscovery.com"}
]
keywords = [
    "notes",
    "markdown",
    "knowledge-base",
    "personal-wiki",
    "note-taking",
    "mcp",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: News/Diary",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "markdown>=3.5.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
    "itsdangerous>=2.1.0",
    "slowapi>=0.1.9",
    "colorama>=0.4.6",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://notediscovery.com"
Documentation = "https://github.com/gamosoft/NoteDiscovery#readme"
Repository = "https://github.com/gamosoft/NoteDiscovery"
Issues = "https://github.com/gamosoft/NoteDiscovery/issues"

[project.scripts]
# Main application
notediscovery = "run:main"
# MCP server for AI assistants
notediscovery-mcp = "mcp_server:main"

[tool.setuptools]
packages = ["backend", "mcp_server", "plugins"]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
"*" = [
    "*.yaml",
    "*.json",
    "*.css",
    "*.html",
    "*.js",
    "*.svg",
    "*.md",
]
